--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.sleuth.sampler.probability=1.0
 
 #100M
 spring.servlet.multipart.max-file-size=104857600
+
+logging.file.path=/home/appcloudlogs/appuser.log
