--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.sleuth.sampler.probability=1.0
 #100M
 spring.servlet.multipart.max-file-size=104857600
 
-logging.file.path=/home/appcloudlogs/appuser.log
+logging.file.path=/home/logs/appuser
