--- a/app-gateway/src/main/resources/application.yml
+++ b/app-gateway/src/main/resources/application.yml
@@ -16,11 +16,12 @@ spring:
             allowed-headers: "*"
             allowed-methods: "*"
             max-age: 3600
-#      routes:
-#        #表示websocket的转发
-#        - id: app-metadata-websocket
-#          uri: lb:ws://app-websocket
-#          predicates: Path=/app-websocket/**
+        discovery:
+          locator:
+            # 打开后只要注册过的服务可以通过服务名转发（服务名称小写，无需配置路由）
+            # 网关地址/服务名称/方法 如（http://localhost:7070/app-user/user/123）
+            enabled: true
+            lower-case-service-id: true #服务名小写
       default-filters:
         #剔除重复的响应头 RETAIN_FIRST保留第一个
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin, RETAIN_FIRST
