--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=app-order
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/apporder?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=mymysql
+spring.datasource.password=123456
 
 #Nacos
 spring.cloud.nacos.server-addr=localhost:8848
