--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -10,7 +10,7 @@ mybatis.mapper-locations=mapper/*.xml
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/appuser?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=123456
 
 
 #zipkin服务器的地址
