--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.password=123456
 
 #Nacos
 spring.cloud.nacos.server-addr=localhost:8848
+spring.cloud.nacos.config.server-addr=localhost:8848
+spring.cloud.nacos.config.prefix=app-order
+spring.cloud.nacos.config.group=APPORDER
 
 mybatis.mapper-locations=mapper/*.xml
 
