--- a/app-order/src/main/resources/bootstrap.properties
+++ b/app-order/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.cloud.nacos.config.server-addr=localhost:8848
-spring.cloud.nacos.config.prefix=app-order
-spring.cloud.nacos.config.group=APPORDER
+#spring.cloud.nacos.config.server-addr=localhost:8848
+#spring.cloud.nacos.config.prefix=app-order
+#spring.cloud.nacos.config.group=APPORDER
