--- a/app-gateway/src/main/resources/bootstrap.yml
+++ b/app-gateway/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       config:
         server-addr: localhost:18848
         prefix: app-gateway
-        group: APPGATEWA
+        group: APPGATEWAY
