--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=app-user
 
 #Nacos
 spring.cloud.nacos.server-addr=localhost:8848
+spring.cloud.nacos.config.server-addr=localhost:8848
+spring.cloud.nacos.config.prefix=app-user
+spring.cloud.nacos.config.group=APPUSER
 
 mybatis.mapper-locations=mapper/*.xml
 
