--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 
 logging.file.path=/home/logs/apporder
+
+file.uploaddir=/Users/wangwc/IdeaProjects/uploadfiles/
