--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.sleuth.sampler.probability=1.0
 spring.servlet.multipart.max-file-size=104857600
 
 logging.file.path=/home/logs/appuser
+
+mq.binder=ons
+mq.accessKey=
+mq.secretKey=
+mq.sendMsgTimeoutMillis=3000
+mq.namesrvAddr=localhost:9876
+
+mq.userGroupId=GID-USER
+mq.userTopic=topic-user
