--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
                 <version>${caffeine.version}</version>
             </dependency>
 
+            <!--rocketmq-->
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
