--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -31,3 +31,5 @@ mq.namesrvAddr=localhost:9876
 
 mq.userGroupId=GID-USER
 mq.userTopic=topic-user
+mq.orderGroupId=GID-ORDER
+mq.orderTopic=topic-order
