--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>app-user</module>
         <module>app-order</module>
         <module>app-gateway</module>
+        <module>app-util</module>
     </modules>
 
     <dependencyManagement>
