--- a/app-order/pom.xml
+++ b/app-order/pom.xml
@@ -61,6 +61,13 @@
         <!--            <artifactId>spring-cloud-starter-zipkin</artifactId>-->
         <!--        </dependency>-->
 
+
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>apputil</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
