--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -20,3 +20,14 @@ spring.sleuth.sampler.probability=1.0
 logging.file.path=/home/logs/apporder
 
 file.uploaddir=/Users/wangwc/IdeaProjects/uploadfiles/
+
+mq.binder=ons
+mq.accessKey=
+mq.secretKey=
+mq.sendMsgTimeoutMillis=3000
+mq.namesrvAddr=localhost:9876
+
+mq.userGroupId=GID-USER
+mq.userTopic=topic-user
+mq.orderGroupId=GID-ORDER
+mq.orderTopic=topic-order
