--- a/app-order/pom.xml
+++ b/app-order/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.springboot.version}</version>
+<!--            <version>${mybatis.springboot.version}</version>-->
         </dependency>
 
         <!-- 链路相关 -->
@@ -62,11 +62,11 @@
         <!--        </dependency>-->
 
 
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>apputil</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.example</groupId>-->
+<!--            <artifactId>apputil</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
