--- a/app-user/pom.xml
+++ b/app-user/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.springboot.version}</version>
+<!--            <version>${mybatis.springboot.version}</version>-->
         </dependency>
 
         <!-- 链路相关 -->
