--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <lombok.version>1.16.18</lombok.version>
         <swagger2.version>2.9.2</swagger2.version>
         <caffeine.version>2.6.2</caffeine.version>
+        <mybatis.springboot.version>2.1.3</mybatis.springboot.version>
     </properties>
 
     <modules>
@@ -75,6 +76,12 @@
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
                 <version>2.1.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.springboot.version}</version>
             </dependency>
 
         </dependencies>
