--- a/app-user/src/main/resources/bootstrap.properties
+++ b/app-user/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.cloud.nacos.config.server-addr=124.223.82.36:18848
+spring.cloud.nacos.config.server-addr=localhost:18848
 spring.cloud.nacos.config.prefix=app-user
 spring.cloud.nacos.config.group=APPUSER
