--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.application.name=app-user
 #server.servlet.context-path=/USER
 
 #Nacos
-spring.cloud.nacos.server-addr=localhost:8848
+spring.cloud.nacos.server-addr=localhost:18848
 
 mybatis.mapper-locations=mapper/*.xml
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/appuser?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:18888/appuser?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=mysql
 
 
 #zipkin服务器的地址
@@ -38,8 +38,8 @@ mq.orderTopic=topic-order
 #Redis服务器地址
 spring.redis.host=localhost
 #Redis服务器连接端口
-spring.redis.port=6379
-spring.redis.password=
+spring.redis.port=16666
+spring.redis.password=nj2022_19
 #Redis数据库索引（默认为0）
 spring.redis.database=0
 #连接池最大连接数（使用负值表示没有限制）
