--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>app-user</module>
         <module>app-order</module>
         <module>app-gateway</module>
+        <module>app-common</module>
         <module>app-util</module>
     </modules>
 
