--- a/app-common/src/main/resources/bootstrap.properties
+++ b/app-common/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.cloud.nacos.config.server-addr=localhost:18848
 spring.cloud.nacos.config.prefix=app-common
-spring.cloud.nacos.config.group=APP-COMMON
+spring.cloud.nacos.config.group=APPCOMMON
