--- a/app-order/pom.xml
+++ b/app-order/pom.xml
@@ -14,7 +14,7 @@
     <name>apporder</name>
 
     <properties>
-        <mybatis.springboot.version>2.1.3</mybatis.springboot.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -48,7 +48,6 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-<!--            <version>${mybatis.springboot.version}</version>-->
         </dependency>
 
         <!-- 链路相关 -->
