--- a/app-util/pom.xml
+++ b/app-util/pom.xml
@@ -17,33 +17,26 @@
     <properties>
         <java.version>1.8</java.version>
         <jedis.version>3.1.0</jedis.version>
+        <jsonpath.version>2.4.0</jsonpath.version>
+        <appstaticutil.version>0.0.1-SNAPSHOT</appstaticutil.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- rocketmq -->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- caffeine -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <!--            <version>${mybatis.springboot.version}</version>-->
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!-- spring redis -->
@@ -74,13 +67,13 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.4.0</version>
+            <version>${jsonpath.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>appstaticutil</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${appstaticutil.version}</version>
         </dependency>
 
     </dependencies>
