--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <swagger2.version>2.9.2</swagger2.version>
         <caffeine.version>2.6.2</caffeine.version>
         <mybatis.springboot.version>2.1.3</mybatis.springboot.version>
+        <rocketmq-spring-boot.version>2.1.1</rocketmq-spring-boot.version>
     </properties>
 
     <modules>
@@ -77,7 +78,7 @@
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
-                <version>2.1.1</version>
+                <version>${rocketmq-spring-boot.version}</version>
             </dependency>
 
             <dependency>
@@ -91,10 +92,10 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+        <!--        </dependency>-->
 
         <!-- Lombok -->
         <dependency>
