--- a/app-util/pom.xml
+++ b/app-util/pom.xml
@@ -76,6 +76,11 @@
             <version>${appstaticutil.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
