--- a/app-common/pom.xml
+++ b/app-common/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>appcommon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>appcommon</name>
+    <description>DB data</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -31,8 +32,8 @@
         </dependency>
 
         <dependency>
-             <groupId>com.alibaba.cloud</groupId>
-             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
         <!-- mybatis -->
@@ -49,6 +50,16 @@
             <groupId>com.example</groupId>
             <artifactId>apputil</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-redis</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.kafka</groupId>
+                    <artifactId>kafka_2.11</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
