--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.cloud.nacos.server-addr=localhost:8848
 
 mybatis.mapper-locations=mapper/*.xml
 
+#hystrix.command.default.execution.timeout.enable=true
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+#ribbon.ReadTimeout=60000
+#ribbon.ConnectTimeout=60000
+#ribbon.MaxAutoRetries=0
+#ribbon.MaxAutoRetriesNextServier=1
 
 #zipkin服务器的地址
 spring.zipkin.base-url=http://localhost:9411
