--- a/app-user/src/main/resources/application.properties
+++ b/app-user/src/main/resources/application.properties
@@ -12,6 +12,12 @@ spring.datasource.url=jdbc:mysql://localhost:18888/appuser?useUnicode=true&chara
 spring.datasource.username=root
 spring.datasource.password=mysql
 
+#hystrix.command.default.execution.timeout.enable=true
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+#ribbon.ReadTimeout=60000
+#ribbon.ConnectTimeout=60000
+#ribbon.MaxAutoRetries=0
+#ribbon.MaxAutoRetriesNextServier=1
 
 #zipkin服务器的地址
 spring.zipkin.base-url=http://localhost:9411
