去粗无用代码

--- a/app-user/pom.xml
+++ b/app-user/pom.xml
@@ -34,7 +34,7 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
-        <!-- fegin -->
+        <!-- openfeign = feign + ribbon -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
