--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -37,3 +37,8 @@ mq.userGroupId=GID-USER
 mq.userTopic=topic-user
 mq.orderGroupId=GID-ORDER
 mq.orderTopic=topic-order
+
+#seata.registry.type=nacos
+#seata.registry.nacos.application=seata-server
+#seata.registry.nacos.server-addr=localhost:18848
+#seata.registry.nacos.group=SEATA_GROUP
