--- a/app-common/pom.xml
+++ b/app-common/pom.xml
@@ -59,11 +59,11 @@
         </dependency>
 
         <!-- Groovy 动态脚本解析 -->
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>2.4.8</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.codehaus.groovy</groupId>-->
+<!--            <artifactId>groovy-all</artifactId>-->
+<!--            <version>2.4.8</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
