--- a/app-static-util/pom.xml
+++ b/app-static-util/pom.xml
@@ -53,6 +53,13 @@
             <version>${fastjson.version}</version>
         </dependency>
 
+        <!-- Groovy 动态脚本解析 -->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.8</version>
+        </dependency>
+
     </dependencies>
 
 </project>
