--- a/app-data/src/main/resources/application.properties
+++ b/app-data/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.sleuth.sampler.probability=1.0
 
 spring.servlet.multipart.max-file-size=104857600
 
+logging.level.root=debug
 logging.file.path=/home/logs/appdata
